# smooth

./: .RProfile  .Rbuildignore  .Rprofile  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CLAUDE.md  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  cran-comments.md  dev_load.R  prompt.txt  smooth.Rproj
R/: GES.R  adam-ces.R  (+84 more)
python/: ADAM_API_REFERENCE.md  CLAUDE.md  CMakeLists.txt  Makefile  NEWS.md  README.md  SMOOTH_EIGENS_CHANGES.md  claude_changelog.md  pyproject.toml  requirements.txt  setup.cfg  smooth-4-3-2-Cpp-classess-comments.txt  smooth-4-3-2-admissible-bounds.txt  smooth-4-3-2-initialisation-comment.txt  smooth_package_structure.md  test_smooth_eigens_simple.py
python/docs/: WINDOWS_DLL_NOTES.md  api.rst  autoadam.rst  conf.py  index.rst  lowess.rst  msarima.rst  msdecompose.rst  om.rst  sma.rst
python/docs/_autosummary/: smooth.ADAM.actuals.rst  smooth.ADAM.aic.rst  smooth.ADAM.aicc.rst  smooth.ADAM.b_value.rst  smooth.ADAM.bic.rst  smooth.ADAM.bicc.rst  smooth.ADAM.coef.rst  smooth.ADAM.data.rst  smooth.ADAM.fit.rst  smooth.ADAM.holdout_data.rst  smooth.ADAM.lags_used.rst  smooth.ADAM.loss_.rst  smooth.ADAM.measurement.rst  smooth.ADAM.model_type.rst  smooth.ADAM.models.rst  smooth.ADAM.nobs.rst  smooth.ADAM.nparam.rst  smooth.ADAM.plot.rst  smooth.ADAM.predict.rst  smooth.ADAM.predict_intervals.rst  smooth.ADAM.profile.rst  smooth.ADAM.residuals.rst  smooth.ADAM.rmultistep.rst  smooth.ADAM.rst  smooth.ADAM.rstandard.rst  smooth.ADAM.rstudent.rst  smooth.ADAM.scale.rst  smooth.ADAM.select_best_model.rst  smooth.ADAM.sigma.rst  smooth.ADAM.summary.rst  smooth.ADAM.time_elapsed.rst  smooth.ADAM.transition.rst  smooth.AutoADAM.actuals.rst  smooth.AutoADAM.b_value.rst  smooth.AutoADAM.bic.rst  smooth.AutoADAM.data.rst  smooth.AutoADAM.fit.rst  smooth.AutoADAM.fitted.rst  smooth.AutoADAM.holdout_data.rst  smooth.AutoADAM.initial_value.rst  (+136 more)
python/docs/_build/doctrees/: api.doctree  autoadam.doctree  environment.pickle  index.doctree  msarima.doctree  msdecompose.doctree
python/docs/_build/html/: .buildinfo  api.html  autoadam.html  genindex.html  index.html  lowess.html  msarima.html  msdecompose.html  objects.inv  om.html  py-modindex.html  search.html  searchindex.js
python/docs/_templates/: class.rst  method.rst
python/reports/: cpp_unification_migration.md
python/reports/documentation/: README.md
python/reports/documentation/cpp_shared/: 00_OVERVIEW.md  01_HEADERS_AND_SOURCES.md  02_API_REFERENCE.md
python/reports/documentation/python_package/: 00_OVERVIEW.md  01_FILE_INDEX.md  02_FUNCTION_REGISTRY.md  03_ADAM_FLOW.md
python/reports/documentation/r_package/: 00_OVERVIEW.md  01_FILE_INDEX.md  02_FUNCTION_REGISTRY.md  03_ADAM_FLOW.md
python/reports/documentation/translation/: 00_TRANSLATION_INDEX.md  01_PARAMETER_MAPPING.md  02_DATA_STRUCTURE_MAPPING.md  03_COVERAGE_MATRIX.md  04_TRANSLATION_CHECKLIST.md
python/reports/old/: two_stage_investigation_summary.md
python/reports/templates/: plan_creation.md
python/reports/two_stage_initialization/: BUG_FIX_SUMMARY.md  FINAL_FIX.md  IMPLEMENTATION_SUMMARY.md  plan.md
python/skills/: smooth-cpp-shared.md  smooth-documentation-master.md  smooth-python-package.md  smooth-r-package.md  smooth-translation.md
python/smooth/: __init__.py  msdecompose.py
python/smooth/adam_general/: __init__.py  _adam_general.py  adam.py  adam_profile.py  creator.py  sma.py  test.py  test_3.ipynb  test_adam.ipynb  test_adam_r.ipynb  test_msdecompose.py  test_script.py  tests_2.ipynb  utils.py
python/smooth/my_linalg/: __init__.py
python/src/smooth/: __init__.py  lowess.py  utils.py
python/tests/: 2026-01-18-Mcomp-test.npy  2026-01-19-Mcomp-param_results.npy  __init__.py  _r_bridge.py  adam_profiling.ipynb  conftest.py  mcomp-tests.ipynb  mcomp.py  r_results.txt  test_adam.py  test_adam_airpassengers.py  test_adam_combination.py  test_adam_ets_python.ipynb  test_adam_explanatory.py  test_adam_multistep_intervals.py  test_adam_occurrence_intervals.py  test_adam_predict.py  test_adam_simulate.py  test_adam_summary_r_comparison.py  test_alm_parity.py  test_auto_adam.py  test_auto_adam_vs_r.py  test_auto_msarima.py  test_auto_om.py  test_ces.py  test_coefbootstrap.py  test_coefbootstrap_r_parity.py  test_data.csv  test_debug_eigens.py  test_es.py  test_fi_r_comparison.py  test_lowess.py  test_msdecompose.py  test_msdecompose_r_parity.py  test_multicov.py  test_multicov_r_parity.py  test_nlopt_kargs.py  test_om.py  test_om_r_comparison.py  test_om_simulate.py  (+23 more)
python/tests/R scripts/: 2026-04-09-etsX-R.R  auto_adam_reference.R  ces_reference.R  generate_adam_occurrence_intervals.R  generate_fi_reference.R  generate_om_reference.R  generate_om_summary_reference.R  generate_omg_reference.R  generate_summary_reference.R
python/tests/data/: auto_adam_reference.json  ces_airpassengers.csv  ces_nonseasonal.csv  ces_quarterly.csv  ces_reference.json  etsx_data.csv  ref_ets_arima.csv  ref_ets_arima_seasonal.csv  ref_ets_only.csv  ref_nnn_nonseasonal.csv  ref_nnn_seasonal.csv
python/tests/jupiter/: 2026-02-27-benchmark-ets-all-no-sktime.npy  2026-02-27-benchmark-ets-all.npy  2026-03-03-benchmark-ets-all.npy  benchmark_exponential_smoothing.ipynb
python/tests/notebooks/: 2026-03-16-benchmark-ets-all.npy  2026-03-21-benchmark-ets-all.npy  2026-04-09-etsX.ipynb  benchmark_exponential_smoothing.ipynb  update_benchmark_packages.sh
python/tests/simulation_intervals/: test_data_aan.csv  test_data_ana.csv  test_simulation_python.ipynb
python/tests/speed_tests/: BENCHMARK_SETUP.md  bench_arima.ipynb  bench_arima_auto.ipynb  bench_ets copy.ipynb  bench_ets_r.ipynb  benchmark_ets.py  benchmark_ets_R.R  extract_data_from_R.R  lb_file.R  results_all.csv  results_all_summary.csv  utils_benchmark.py
python/tests/two_stage/: script_R.py  script_python.py  test_two_stage_python.ipynb  test_two_stage_r.ipynb
python_old/: CMakeLists.txt  README.md
python_old/smooth/adam_general/: __init__.py  load_r_package.py  test_3.ipynb  test_adam.ipynb  test_adam_r.ipynb  test_script.py  tests.ipynb
(+1337 files in other folders)
